chore: document coursee show endpoint
